finished first draft of proposal

--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -197,6 +197,7 @@
 \newcommand{\correctionfluxletter}{p}
 \newcommand{\correctionfluxvector}{\mathbf{\correctionfluxletter}}
 \newcommand{\correctionfluxij}{\MakeUppercase{\correctionfluxletter}_{i,j}}
+\newcommand{\correctionfluxji}{\MakeUppercase{\correctionfluxletter}_{j,i}}
 \newcommand{\correctionfluxmatrix}{\mathbf{\MakeUppercase{\correctionfluxletter}}}
 \newcommand{\correctionfluxsumsi}{\MakeUppercase{\correctionfluxletter}^\pm_i}
 \newcommand{\limitedfluxsum}{\limitermatrix\cdot\correctionfluxmatrix}
