--- a/doc/proposal/spatial_discretization_shallowwater.tex
+++ b/doc/proposal/spatial_discretization_shallowwater.tex
@@ -26,7 +26,7 @@ where hereafter the nodal flux values used as interpolation values,
 $\consfluxvector(\vectorsolution(\x_j,\timevalue))$,
 will be denoted as $\consfluxinterpolant_j(\timevalue)$. This is done
 as a step for proving the domain-invariance of the low-order scheme,
-which is introduced in Section \ref{sec:low_order_scheme_system}.
+which is omitted here for brevity.
 
 Rearranging Equation \eqref{eq:shallow_water_equations},
 substituting the approximate FEM
