--- a/doc/proposal/high_order_scheme.tex
+++ b/doc/proposal/high_order_scheme.tex
@@ -50,7 +50,7 @@ in the high-order scheme uses the entropy viscosity with an upper bound
 of the low-order viscosity for a given cell, since a viscosity above
 this would be in excess:
 \begin{equation}
-  \nu^{H,n}_K = \min(\nu^{L}_K,\nu^{\eta,n}_K) \eqp
+  \nu^{H,n}_K = \min(\nu^{L,n}_K,\nu^{\eta,n}_K) \eqp
 \end{equation}
 After computation of the high-order cell viscosities, the high-order diffusion
 matrix is assembled just like the low-order diffusion matrix but replacing
