--- a/doc/proposal/spatial_discretization_scalar.tex
+++ b/doc/proposal/spatial_discretization_scalar.tex
@@ -42,6 +42,6 @@ and $\ssmatrix$ is the steady-state matrix:
 where $\support\ij$ is the dual support of $\testfunction_i(\x)$ and
 $\testfunction_j(\x)$.
 If the flux function $\consfluxscalar$ were nonlinear, then the system would
-be nonlinear, but it would be expressible in a quasilinear form:
+be nonlinear, but it can be expressed in a quasilinear form:
 $\ssmatrix\rightarrow\ssmatrix(\approximatescalarsolution)$.
 
