finished second draft of proposal

--- a/doc/proposal/conclusions.tex
+++ b/doc/proposal/conclusions.tex
@@ -20,6 +20,4 @@ limitation of one set of variables (such as the conservative variables)
 does not necessarily imply the same constraints are imposed on
 auxiliary quantities. Research remains to consider what limitation
 procedure(s) will give satisfactory results for the shallow water
-equations. Other goals that remain include niceties such as timing
-and parallelization studies, which may or may not be achievable in
-the time remaining.
+equations.
