added doxygen main page and started functions to output FCT bounds transient

--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -140,6 +140,16 @@
   Year                     = {2015}
 }
 
+@PhdThesis{hansel,
+  Title                    = {Application of the Entropy Viscosity Method and the Flux-Corrected Transport Algorithm to Scalar Transport Equations and the Shallow Water Equations},
+  Author                   = {Joshua Hansel},
+  School                   = {Texas A\&M University},
+  Year                     = {2016},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.01.20}
+}
+
 @Article{kruzkov1970,
   Title                    = {FIrst-Order Quasilinear Equations in Several Independent Variables},
   Author                   = {S. N. Kru\v{z}kov},
