--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -150,6 +150,19 @@
   Timestamp                = {2016.01.20}
 }
 
+@Article{hoff_1985,
+  Title                    = {Invariant Regions for Systems of Conservation Laws},
+  Author                   = {David Hoff},
+  Journal                  = {Transactions of the American Mathematical Society},
+  Year                     = {1985},
+  Pages                    = {591--610},
+  Volume                   = {289},
+
+  Doi                      = {http://dx.doi.org/10.1090/S0002-9947-1985-0784005-3},
+  Owner                    = {joshua},
+  Timestamp                = {2016.01.21}
+}
+
 @Article{kruzkov1970,
   Title                    = {FIrst-Order Quasilinear Equations in Several Independent Variables},
   Author                   = {S. N. Kru\v{z}kov},
