--- a/doc/proposal/temporal_discretization.tex
+++ b/doc/proposal/temporal_discretization.tex
@@ -1,6 +1,5 @@
-Traditionally, methods for solving conservation law problems are only
-applicable with explicit time discretizations. In this research, the
-scalar case also considers the steady-state case and implicit
+This research mainly considers explicit time discretizations but also considers
+the steady-state case and implicit
 temporal discretizations such as $\theta$ methods (which include backward
 Euler and Crank-Nicolson, for example). The steady-state and implicit time
 discretizations are complicated by the fact that the
