small slide fix

--- a/doc/presentations/prelim/presentation.tex
+++ b/doc/presentations/prelim/presentation.tex
@@ -326,7 +326,7 @@ Transport Algorithm to Hyperbolic Conservation Laws}
 \frametitle{Local Viscous Bilinear Form}
 
 \begin{itemize}
-   \item The local bilinear form is defined as follows, where $|K|$ denotes
+   \item The local bilinear form is defined as follows, where $\cellvolume$ denotes
       the volume of element $K$, $\mathcal{I}(K)$ is the set of indices
       corresponding to degrees of freedom with nonempty support on $K$, and
       $n_K$ is the cardinality of this set.
